# it_robot

./: README.md
nema_navsat_driver/: CMakeLists.txt  package.xml
nema_navsat_driver/config/: ros_log_config.ini
nema_navsat_driver/include/nema_navsat_driver/: driver.h
nema_navsat_driver/launch/: nmea_serial_driver.launch
public/: .gitattributes
public/cartographer/src/cartographer/cartographer/io/internal/: mapping_state_serialization.cc
public/cartographer/src/cartographer/cartographer/mapping/internal/2d/: local_trajectory_builder_2d.cc  pose_graph_2d.h
public/cartographer/src/cartographer/cartographer/mapping/internal/constraints/: constraint_builder_2d.cc  constraint_builder_2d.h
public/cartographer/src/cartographer_ros/cartographer_ros/: CMakeLists.txt  package.xml
public/cartographer/src/cartographer_ros/cartographer_ros/cartographer_ros/: auto_relocalizer.cc  map_builder_bridge.h  node.cc  node.h  node_main.cc  pbstream_to_ros_map_main.cc  pose_initializer copy xh.cc  pose_initializer copy zyh.cc  pose_initializer copy.cc  pose_initializer.cc  pose_recorder.cc
public/cartographer/src/cartographer_ros/cartographer_ros/configuration_files/: rviz.rviz  yahboomcar_2d.lua  yahboomcar_2d_localization copy.lua  yahboomcar_2d_localization.lua
public/cartographer/src/cartographer_ros/cartographer_ros/launch/: demo_car_2d.launch  demo_car_2d_localization.launch
public/cartographer/src/cartographer_ros/cartographer_ros/params/: candidate_poses.yaml  ekf_template.yaml  origin.yaml  pose.yaml
public/cartographer/src/cartographer_ros/cartographer_ros/urdf/: car.urdf
public/cartographer/src/cloud_deskewed/: CMakeLists.txt  package.xml
public/cartographer/src/cloud_deskewed/config/: config.yaml
public/cartographer/src/cloud_deskewed/include/: utility.h
public/cartographer/src/cloud_deskewed/launch/: rs_lidar_deskew.launch
public/cartographer/src/cloud_deskewed/msg/: cloud_info.msg
public/cartographer/src/cloud_deskewed/src/: rs_lidar_deskew.cpp  velodyne_lidar_deskew.cpp
public/maps/: map.json  map.yaml  pointrelationship.json
public/nema_navsat_driver/include/nema_navsat_driver/: parser.h
public/nema_navsat_driver/src/: driver.cpp  nmea_serial_driver.cpp  parser.cpp
public/zlog-master/: zlog.conf
public/zlog-master/src/: scp.sh
public/zlog-master/test/: test_hello.c
robot_upstart/templates/: job-start.em  systemd_job.conf.em
um482_ros_wrapper/: CMakeLists.txt  README.md  package.xml
um482_ros_wrapper/config/: UM482.yaml
um482_ros_wrapper/include/: um482_driver.h
um482_ros_wrapper/launch/: start.launch
um482_ros_wrapper/src/: main.cpp
zhangxuefeng-skill/: LICENSE
